<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/delete_btn"
        android:layout_width="131dp"
        android:layout_height="44dp"
        android:layout_marginBottom="28dp"
        android:background="#78CBC2"
        android:text="@string/Delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_btn"
        app:layout_constraintHorizontal_bias="0.371"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="131dp"
        android:layout_height="44dp"
        android:layout_marginBottom="28dp"
        android:background="#78CBC2"
        android:text="@string/Edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.871"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/add_btn"
        android:layout_width="131dp"
        android:layout_height="44dp"
        android:background="#78CBC2"
        android:text="@string/Add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteY="43dp" />

    <ListView
        android:id="@+id/listview_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#9006"
        />



</androidx.constraintlayout.widget.ConstraintLayout>