<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <Button
        android:id="@+id/del_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="272dp"
        android:layout_marginBottom="93dp"
        android:onClick="deleteBook"
        android:text="delete" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="424dp"
        android:text="description" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/description"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="417dp"
        android:layout_marginEnd="69dp"
        android:hint="description" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="260dp"
        android:text="State" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/state"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="247dp"
        android:layout_marginEnd="77dp"
        android:hint="@string/state" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="22dp"
        android:layout_marginTop="331dp"
        android:text="author" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/author"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="74dp"
        android:hint="@string/author" />


    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="93dp"
        android:onClick="editBook"
        android:text="Edit" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_name"
        android:layout_width="171dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="164dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="76dp"
        android:hint="@string/name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/input_landed"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="178dp"
        android:layout_marginEnd="77dp"
        android:hint="@string/landed" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="26dp"
        android:layout_marginTop="98dp"
        android:text="name" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="191dp"
        android:text="landed" />


</RelativeLayout>